csl/cslbase/r2l.output
Terminals which are not used

   HASHIF
   HASHELSE
   HASHELIF
   HASHENDIF


State 59 conflicts: 2 shift/reduce
State 96 conflicts: 2 reduce/reduce
State 97 conflicts: 1 shift/reduce, 5 reduce/reduce
State 135 conflicts: 2 shift/reduce
State 138 conflicts: 2 reduce/reduce
State 140 conflicts: 18 reduce/reduce
State 152 conflicts: 2 shift/reduce
State 241 conflicts: 2 reduce/reduce
State 242 conflicts: 3 reduce/reduce
State 245 conflicts: 2 reduce/reduce
State 246 conflicts: 4 reduce/reduce
State 249 conflicts: 2 reduce/reduce
State 250 conflicts: 5 reduce/reduce
State 254 conflicts: 2 reduce/reduce
State 255 conflicts: 6 reduce/reduce
State 278 conflicts: 2 reduce/reduce
State 280 conflicts: 1 shift/reduce, 16 reduce/reduce
State 289 conflicts: 2 reduce/reduce
State 291 conflicts: 1 shift/reduce, 18 reduce/reduce
State 296 conflicts: 20 reduce/reduce
State 298 conflicts: 2 reduce/reduce
State 305 conflicts: 2 reduce/reduce
State 307 conflicts: 1 shift/reduce, 20 reduce/reduce
State 319 conflicts: 1 shift/reduce
State 320 conflicts: 2 shift/reduce
State 340 conflicts: 2 shift/reduce
State 341 conflicts: 36 reduce/reduce
State 394 conflicts: 2 reduce/reduce
State 395 conflicts: 3 reduce/reduce
State 396 conflicts: 2 reduce/reduce
State 397 conflicts: 4 reduce/reduce
State 398 conflicts: 2 reduce/reduce
State 399 conflicts: 5 reduce/reduce


Grammar

    0 $accept: wholefile $end

    1 wholefile: ENDFILE
    2          | command wholefile

    3 command: cmnd sep
    4        | proc_type sep
    5        | END
    6        | END sep

    7 sep: ';'
    8    | '$'

    9 proc_type: SYMBOLIC
   10          | ALGEBRAIC

   11 proc_qual: EXPR
   12          | MACRO
   13          | SMACRO

   14 sym_list: ')'
   15         | ',' SYMBOL sym_list

   16 infix: SETQ
   17      | OR
   18      | AND
   19      | MEMBER
   20      | MEMQ
   21      | '='
   22      | NEQ
   23      | EQ
   24      | GEQ
   25      | '>'
   26      | LEQ
   27      | '<'
   28      | FREEOF
   29      | '+'
   30      | '-'
   31      | '*'
   32      | '/'
   33      | '^'
   34      | '.'

   35 prefix: NOT
   36       | '+'
   37       | '-'

   38 proc_head: SYMBOL
   39          | SYMBOL SYMBOL
   40          | SYMBOL '(' ')'
   41          | SYMBOL '(' SYMBOL sym_list
   42          | prefix SYMBOL
   43          | SYMBOL infix SYMBOL

   44 proc_def: PROCEDURE proc_head sep cmnd
   45         | proc_type PROCEDURE proc_head sep cmnd
   46         | proc_qual PROCEDURE proc_head sep cmnd
   47         | proc_type proc_qual PROCEDURE proc_head sep cmnd

   48 rlistat: RLISTAT
   49        | IN
   50        | ON

   51 rltail: expr
   52       | expr ',' rltail

   53 cmnd: expr
   54     | rlistat rltail

   55 if_stmt: IF expr THEN cmnd ELSE cmnd
   56        | IF expr THEN cmnd

   57 for_update: ':' expr
   58           | STEP expr UNTIL expr

   59 for_action: DO
   60           | SUM
   61           | COLLECT

   62 for_inon: IN
   63         | ON

   64 for_stmt: FOR SYMBOL SETQ expr for_update for_action cmnd
   65         | FOR EACH SYMBOL for_inon expr for_action cmnd
   66         | FOREACH SYMBOL for_inon expr for_action cmnd

   67 while_stmt: WHILE expr DO cmnd

   68 repeat_stmt: REPEAT cmnd UNTIL expr

   69 return_stmt: RETURN
   70            | RETURN expr

   71 goto_stmt: GOTO SYMBOL
   72          | GO SYMBOL
   73          | GO TO SYMBOL

   74 group_tail: RSECT
   75           | sep RSECT
   76           | sep cmnd group_tail

   77 group_expr: LSECT cmnd group_tail

   78 scalar_tail: sep
   79            | ',' SYMBOL scalar_tail
   80            | ',' INTEGER scalar_tail

   81 scalar_def: SCALAR SYMBOL scalar_tail
   82           | INTEGER SYMBOL scalar_tail

   83 scalar_defs: scalar_def
   84            | scalar_defs scalar_def

   85 block_tail: END
   86           | cmnd END
   87           | SYMBOL ':' block_tail
   88           | cmnd sep block_tail
   89           | sep block_tail

   90 block_expr: BEGIN scalar_defs block_tail
   91           | BEGIN block_tail

   92 lambda_vars: sep
   93            | ',' SYMBOL lambda_vars

   94 lambda_expr: LAMBDA SYMBOL lambda_vars cmnd
   95            | LAMBDA '(' ')' sep cmnd
   96            | LAMBDA '(' SYMBOL sym_list sep cmnd

   97 expr: rx0
   98     | lx0

   99 rx0: lx0 WHERE SYMBOL '=' rx1
  100    | rx1

  101 lx0: lx0 WHERE SYMBOL '=' lx1
  102    | lx1

  103 rx1: lx2 SETQ rx1
  104    | rx2

  105 lx1: lx2 SETQ lx1
  106    | lx2

  107 rx2tail: rx3
  108        | lx3 OR rx2tail

  109 rx2: lx3 OR rx2tail
  110    | rx3

  111 lx2tail: lx3
  112        | lx3 OR lx2tail

  113 lx2: lx3 OR lx2tail
  114    | lx3

  115 rx3tail: rx4
  116        | lx4 AND rx3tail

  117 rx3: lx4 AND rx3tail
  118    | rx4

  119 lx3tail: lx4
  120        | lx4 AND lx3tail

  121 lx3: lx4 AND lx3tail
  122    | lx4

  123 rx4: NOT rx4
  124    | rx5

  125 lx4: NOT lx4
  126    | lx5

  127 rx5: lx6 MEMBER ry6
  128    | lx6 MEMQ ry6
  129    | lx6 '=' ry6
  130    | lx6 NEQ ry6
  131    | lx6 EQ ry6
  132    | lx6 GEQ ry6
  133    | lx6 '>' ry6
  134    | lx6 LEQ ry6
  135    | lx6 '<' ry6
  136    | lx6 FREEOF ry6
  137    | rx6

  138 lx5: lx6 MEMBER ly6
  139    | lx6 MEMQ ly6
  140    | lx6 '=' ly6
  141    | lx6 NEQ ly6
  142    | lx6 EQ ly6
  143    | lx6 GEQ ly6
  144    | lx6 '>' ly6
  145    | lx6 LEQ ly6
  146    | lx6 '<' ly6
  147    | lx6 FREEOF ly6
  148    | lx6

  149 ry6: NOT ry6
  150    | rx6

  151 ly6: NOT ly6
  152    | lx6

  153 rx6tail: ry6a
  154        | ly6a '+' rx6tail

  155 rx6: lx6a '+' rx6tail
  156    | rx6a

  157 lx6tail: ly6a
  158        | ly6a '+' lx6tail

  159 lx6: lx6a '+' lx6tail
  160    | lx6a

  161 ry6a: NOT ry6a
  162     | rx6a

  163 rx6a: lx6a '-' ry7
  164     | rx7

  165 ly6a: NOT ly6a
  166     | lx6a

  167 lx6a: lx6a '-' ly7
  168     | lx7

  169 ry7: NOT ry7
  170    | rx7

  171 rx7: '+' ry7
  172    | '-' ry7
  173    | rx8

  174 ly7: NOT ly7
  175    | lx7

  176 lx7: '+' ly7
  177    | '-' ly7
  178    | lx8

  179 rx8tail: ry9
  180        | ly9 '*' rx8tail

  181 rx8: lx9 '*' rx8tail
  182    | rx9

  183 lx8tail: ly9
  184        | ly9 '*' lx8tail

  185 lx8: lx9 '*' lx8tail
  186    | lx9

  187 ry9: NOT ry9
  188    | '+' ry9
  189    | '-' ry9
  190    | rx9

  191 rx9: lx9 '/' ry10
  192    | rx10

  193 ly9: NOT ly9
  194    | '+' ly9
  195    | '-' ly9
  196    | lx9

  197 lx9: lx9 '/' ly10
  198    | lx10

  199 ly10: NOT ly10
  200     | '+' ly10
  201     | '-' ly10
  202     | lx10

  203 lx10: lx11 '^' ly10
  204     | lx11

  205 ry10: NOT ry10
  206     | '+' ry10
  207     | '-' ry10
  208     | rx10

  209 rx10: lx11 '^' ry10
  210     | rx11

  211 ry11: NOT ry11
  212     | '+' ry11
  213     | '-' ry11
  214     | rx11

  215 rx11: x12 '.' ry11
  216     | if_stmt
  217     | for_stmt
  218     | while_stmt
  219     | repeat_stmt
  220     | return_stmt
  221     | goto_stmt
  222     | lambda_expr
  223     | proc_def
  224     | ENDSTAT

  225 ly11: NOT ly11
  226     | '+' ly11
  227     | '-' ly11
  228     | lx11

  229 lx11: x12 '.' ly11
  230     | x12

  231 arg_list: ')'
  232         | ',' expr arg_list

  233 parened: '(' expr ')'

  234 brace_list: '}'
  235           | ',' expr brace_list

  236 commaparened: '(' expr ',' expr arg_list

  237 x12notparened: x13b '[' expr ']'
  238              | x13b '(' ')'
  239              | x13b parened
  240              | x13b commaparened
  241              | x13b x12notparened
  242              | x13b

  243 x12: x12notparened
  244    | parened
  245    | '{' '}'
  246    | expr brace_list
  247    | SETQ commaparened
  248    | OR commaparened
  249    | AND commaparened
  250    | MEMBER commaparened
  251    | MEMQ commaparened
  252    | NEQ commaparened
  253    | EQ commaparened
  254    | GEQ commaparened
  255    | LEQ commaparened
  256    | FREEOF commaparened

  257 x13b: SYMBOL
  258     | NUMBER
  259     | STRING
  260     | LIST
  261     | group_expr
  262     | block_expr


Terminals, with rules where they appear

$end (0) 0
'$' (36) 8
'(' (40) 40 41 95 96 233 236 238
')' (41) 14 40 95 231 233 238
'*' (42) 31 180 181 184 185
'+' (43) 29 36 154 155 158 159 171 176 188 194 200 206 212 226
',' (44) 15 52 79 80 93 232 235 236
'-' (45) 30 37 163 167 172 177 189 195 201 207 213 227
'.' (46) 34 215 229
'/' (47) 32 191 197
':' (58) 57 87
';' (59) 7
'<' (60) 27 135 146
'=' (61) 21 99 101 129 140
'>' (62) 25 133 144
'[' (91) 237
']' (93) 237
'^' (94) 33 203 209
'{' (123) 245
'}' (125) 234 245
error (256)
SETQ (258) 16 64 103 105 247
AND (259) 18 116 117 120 121 249
OR (260) 17 108 109 112 113 248
NOT (261) 35 123 125 149 151 161 165 169 174 187 193 199 205 211 225
MEMBER (262) 19 127 138 250
MEMQ (263) 20 128 139 251
NEQ (264) 22 130 141 252
EQ (265) 23 131 142 253
GEQ (266) 24 132 143 254
LEQ (267) 26 134 145 255
FREEOF (268) 28 136 147 256
SYMBOLIC (269) 9
ALGEBRAIC (270) 10
EXPR (271) 11
MACRO (272) 12
SMACRO (273) 13
PROCEDURE (274) 44 45 46 47
FOR (275) 64 65
STEP (276) 58
UNTIL (277) 58 68
EACH (278) 65
FOREACH (279) 66
IN (280) 49 62
ON (281) 50 63
DO (282) 59 67
COLLECT (283) 61
SUM (284) 60
IF (285) 55 56
THEN (286) 55 56
ELSE (287) 55
REPEAT (288) 68
WHILE (289) 67
BEGIN (290) 90 91
END (291) 5 6 85 86
ENDFILE (292) 1
LSECT (293) 77
RSECT (294) 74 75
GO (295) 72 73
TO (296) 73
GOTO (297) 71
SCALAR (298) 81
INTEGER (299) 80 82
LAMBDA (300) 94 95 96
SYMBOL (301) 15 38 39 40 41 42 43 64 65 66 71 72 73 79 81 82 87 93
    94 96 99 101 257
NUMBER (302) 258
STRING (303) 259
LIST (304) 260
RETURN (305) 69 70
WHERE (306) 99 101
RLISTAT (307) 48
ENDSTAT (308) 224
HASHIF (309)
HASHELSE (310)
HASHELIF (311)
HASHENDIF (312)


Nonterminals, with rules where they appear

$accept (77)
    on left: 0
wholefile (78)
    on left: 1 2, on right: 0 2
command (79)
    on left: 3 4 5 6, on right: 2
sep (80)
    on left: 7 8, on right: 3 4 6 44 45 46 47 75 76 78 88 89 92 95
    96
proc_type (81)
    on left: 9 10, on right: 4 45 47
proc_qual (82)
    on left: 11 12 13, on right: 46 47
sym_list (83)
    on left: 14 15, on right: 15 41 96
infix (84)
    on left: 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33
    34, on right: 43
prefix (85)
    on left: 35 36 37, on right: 42
proc_head (86)
    on left: 38 39 40 41 42 43, on right: 44 45 46 47
proc_def (87)
    on left: 44 45 46 47, on right: 223
rlistat (88)
    on left: 48 49 50, on right: 54
rltail (89)
    on left: 51 52, on right: 52 54
cmnd (90)
    on left: 53 54, on right: 3 44 45 46 47 55 56 64 65 66 67 68 76
    77 86 88 94 95 96
if_stmt (91)
    on left: 55 56, on right: 216
for_update (92)
    on left: 57 58, on right: 64
for_action (93)
    on left: 59 60 61, on right: 64 65 66
for_inon (94)
    on left: 62 63, on right: 65 66
for_stmt (95)
    on left: 64 65 66, on right: 217
while_stmt (96)
    on left: 67, on right: 218
repeat_stmt (97)
    on left: 68, on right: 219
return_stmt (98)
    on left: 69 70, on right: 220
goto_stmt (99)
    on left: 71 72 73, on right: 221
group_tail (100)
    on left: 74 75 76, on right: 76 77
group_expr (101)
    on left: 77, on right: 261
scalar_tail (102)
    on left: 78 79 80, on right: 79 80 81 82
scalar_def (103)
    on left: 81 82, on right: 83 84
scalar_defs (104)
    on left: 83 84, on right: 84 90
block_tail (105)
    on left: 85 86 87 88 89, on right: 87 88 89 90 91
block_expr (106)
    on left: 90 91, on right: 262
lambda_vars (107)
    on left: 92 93, on right: 93 94
lambda_expr (108)
    on left: 94 95 96, on right: 222
expr (109)
    on left: 97 98, on right: 51 52 53 55 56 57 58 64 65 66 67 68 70
    232 233 235 236 237 246
rx0 (110)
    on left: 99 100, on right: 97
lx0 (111)
    on left: 101 102, on right: 98 99 101
rx1 (112)
    on left: 103 104, on right: 99 100 103
lx1 (113)
    on left: 105 106, on right: 101 102 105
rx2tail (114)
    on left: 107 108, on right: 108 109
rx2 (115)
    on left: 109 110, on right: 104
lx2tail (116)
    on left: 111 112, on right: 112 113
lx2 (117)
    on left: 113 114, on right: 103 105 106
rx3tail (118)
    on left: 115 116, on right: 116 117
rx3 (119)
    on left: 117 118, on right: 107 110
lx3tail (120)
    on left: 119 120, on right: 120 121
lx3 (121)
    on left: 121 122, on right: 108 109 111 112 113 114
rx4 (122)
    on left: 123 124, on right: 115 118 123
lx4 (123)
    on left: 125 126, on right: 116 117 119 120 121 122 125
rx5 (124)
    on left: 127 128 129 130 131 132 133 134 135 136 137,
    on right: 124
lx5 (125)
    on left: 138 139 140 141 142 143 144 145 146 147 148,
    on right: 126
ry6 (126)
    on left: 149 150, on right: 127 128 129 130 131 132 133 134 135
    136 149
ly6 (127)
    on left: 151 152, on right: 138 139 140 141 142 143 144 145 146
    147 151
rx6tail (128)
    on left: 153 154, on right: 154 155
rx6 (129)
    on left: 155 156, on right: 137 150
lx6tail (130)
    on left: 157 158, on right: 158 159
lx6 (131)
    on left: 159 160, on right: 127 128 129 130 131 132 133 134 135
    136 138 139 140 141 142 143 144 145 146 147 148 152
ry6a (132)
    on left: 161 162, on right: 153 161
rx6a (133)
    on left: 163 164, on right: 156 162
ly6a (134)
    on left: 165 166, on right: 154 157 158 165
lx6a (135)
    on left: 167 168, on right: 155 159 160 163 166 167
ry7 (136)
    on left: 169 170, on right: 163 169 171 172
rx7 (137)
    on left: 171 172 173, on right: 164 170
ly7 (138)
    on left: 174 175, on right: 167 174 176 177
lx7 (139)
    on left: 176 177 178, on right: 168 175
rx8tail (140)
    on left: 179 180, on right: 180 181
rx8 (141)
    on left: 181 182, on right: 173
lx8tail (142)
    on left: 183 184, on right: 184 185
lx8 (143)
    on left: 185 186, on right: 178
ry9 (144)
    on left: 187 188 189 190, on right: 179 187 188 189
rx9 (145)
    on left: 191 192, on right: 182 190
ly9 (146)
    on left: 193 194 195 196, on right: 180 183 184 193 194 195
lx9 (147)
    on left: 197 198, on right: 181 185 186 191 196 197
ly10 (148)
    on left: 199 200 201 202, on right: 197 199 200 201 203
lx10 (149)
    on left: 203 204, on right: 198 202
ry10 (150)
    on left: 205 206 207 208, on right: 191 205 206 207 209
rx10 (151)
    on left: 209 210, on right: 192 208
ry11 (152)
    on left: 211 212 213 214, on right: 211 212 213 215
rx11 (153)
    on left: 215 216 217 218 219 220 221 222 223 224,
    on right: 210 214
ly11 (154)
    on left: 225 226 227 228, on right: 225 226 227 229
lx11 (155)
    on left: 229 230, on right: 203 204 209 228
arg_list (156)
    on left: 231 232, on right: 232 236
parened (157)
    on left: 233, on right: 239 244
brace_list (158)
    on left: 234 235, on right: 235 246
commaparened (159)
    on left: 236, on right: 240 247 248 249 250 251 252 253 254 255
    256
x12notparened (160)
    on left: 237 238 239 240 241 242, on right: 241 243
x12 (161)
    on left: 243 244 245 246 247 248 249 250 251 252 253 254 255 256
   , on right: 215 229 230
x13b (162)
    on left: 257 258 259 260 261 262, on right: 237 238 239 240 241
    242


state 0

    0 $accept: . wholefile $end

    SETQ       shift, and go to state 1
    AND        shift, and go to state 2
    OR         shift, and go to state 3
    NOT        shift, and go to state 4
    MEMBER     shift, and go to state 5
    MEMQ       shift, and go to state 6
    NEQ        shift, and go to state 7
    EQ         shift, and go to state 8
    GEQ        shift, and go to state 9
    LEQ        shift, and go to state 10
    FREEOF     shift, and go to state 11
    SYMBOLIC   shift, and go to state 12
    ALGEBRAIC  shift, and go to state 13
    EXPR       shift, and go to state 14
    MACRO      shift, and go to state 15
    SMACRO     shift, and go to state 16
    PROCEDURE  shift, and go to state 17
    FOR        shift, and go to state 18
    FOREACH    shift, and go to state 19
    IN         shift, and go to state 20
    ON         shift, and go to state 21
    IF         shift, and go to state 22
    REPEAT     shift, and go to state 23
    WHILE      shift, and go to state 24
    BEGIN      shift, and go to state 25
    END        shift, and go to state 26
    ENDFILE    shift, and go to state 27
    LSECT      shift, and go to state 28
    GO         shift, and go to state 29
    GOTO       shift, and go to state 30
    LAMBDA     shift, and go to state 31
    SYMBOL     shift, and go to state 32
    NUMBER     shift, and go to state 33
    STRING     shift, and go to state 34
    LIST       shift, and go to state 35
    RETURN     shift, and go to state 36
    RLISTAT    shift, and go to state 37
    ENDSTAT    shift, and go to state 38
    '+'        shift, and go to state 39
    '-'        shift, and go to state 40
    '('        shift, and go to state 41
    '{'        shift, and go to state 42

    wholefile      go to state 43
    command        go to state 44
    proc_type      go to state 45
    proc_qual      go to state 46
    proc_def       go to state 47
    rlistat        go to state 48
    cmnd           go to state 49
    if_stmt        go to state 50
    for_stmt       go to state 51
    while_stmt     go to state 52
    repeat_stmt    go to state 53
    return_stmt    go to state 54
    goto_stmt      go to state 55
    group_expr     go to state 56
    block_expr     go to state 57
    lambda_expr    go to state 58
    expr           go to state 59
    rx0            go to state 60
    lx0            go to state 61
    rx1            go to state 62
    lx1            go to state 63
    rx2            go to state 64
    lx2            go to state 65
    rx3            go to state 66
    lx3            go to state 67
    rx4            go to state 68
    lx4            go to state 69
    rx5            go to state 70
    lx5            go to state 71
    rx6            go to state 72
    lx6            go to state 73
    rx6a           go to state 74
    lx6a           go to state 75
    rx7            go to state 76
    lx7            go to state 77
    rx8            go to state 78
    lx8            go to state 79
    rx9            go to state 80
    lx9            go to state 81
    lx10           go to state 82
    rx10           go to state 83
    rx11           go to state 84
    lx11           go to state 85
    parened        go to state 86
    x12notparened  go to state 87
    x12            go to state 88
    x13b           go to state 89


state 1

  247 x12: SETQ . commaparened

    '('  shift, and go to state 90

    commaparened  go to state 91


state 2

  249 x12: AND . commaparened

    '('  shift, and go to state 90

    commaparened  go to state 92


state 3

  248 x12: OR . commaparened

    '('  shift, and go to state 90

    commaparened  go to state 93


state 4

  123 rx4: NOT . rx4
  125 lx4: NOT . lx4

    SETQ       shift, and go to state 1
    AND        shift, and go to state 2
    OR         shift, and go to state 3
    NOT        shift, and go to state 4
    MEMBER     shift, and go to state 5
    MEMQ       shift, and go to state 6
    NEQ        shift, and go to state 7
    EQ         shift, and go to state 8
    GEQ        shift, and go to state 9
    LEQ        shift, and go to state 10
    FREEOF     shift, and go to state 11
    SYMBOLIC   shift, and go to state 12
    ALGEBRAIC  shift, and go to state 13
    EXPR       shift, and go to state 14
    MACRO      shift, and go to state 15
    SMACRO     shift, and go to state 16
    PROCEDURE  shift, and go to state 17
    FOR        shift, and go to state 18
    FOREACH    shift, and go to state 19
    IF         shift, and go to state 22
    REPEAT     shift, and go to state 23
    WHILE      shift, and go to state 24
    BEGIN      shift, and go to state 25
    LSECT      shift, and go to state 28
    GO         shift, and go to state 29
    GOTO       shift, and go to state 30
    LAMBDA     shift, and go to state 31
    SYMBOL     shift, and go to state 32
    NUMBER     shift, and go to state 33
    STRING     shift, and go to state 34
    LIST       shift, and go to state 35
    RETURN     shift, and go to state 36
    ENDSTAT    shift, and go to state 38
    '+'        shift, and go to state 39
    '-'        shift, and go to state 40
    '('        shift, and go to state 41
    '{'        shift, and go to state 42

    proc_type      go to state 94
    proc_qual      go to state 46
    proc_def       go to state 47
    if_stmt        go to state 50
    for_stmt       go to state 51
    while_stmt     go to state 52
    repeat_stmt    go to state 53
    return_stmt    go to state 54
    goto_stmt      go to state 55
    group_expr     go to state 56
    block_expr     go to state 57
    lambda_expr    go to state 58
    expr           go to state 95
    rx0            go to state 60
    lx0            go to state 61
    rx1            go to state 62
    lx1            go to state 63
    rx2            go to state 64
    lx2            go to state 65
    rx3            go to state 66
    lx3            go to state 67
    rx4            go to state 96
    lx4            go to state 97
    rx5            go to state 70
    lx5            go to state 71
    rx6            go to state 72
    lx6            go to state 73
    rx6a           go to state 74
    lx6a           go to state 75
    rx7            go to state 76
    lx7            go to state 77
    rx8            go to state 78
    lx8            go to state 79
    rx9            go to state 80
    lx9            go to state 81
    lx10           go to state 82
    rx10           go to state 83
    rx11           go to state 84
    lx11           go to state 85
    parened        go to state 86
    x12notparened  go to state 87
    x12            go to state 88
    x13b           go to state 89


state 5

  250 x12: MEMBER . commaparened

    '('  shift, and go to state 90

    commaparened  go to state 98


state 6

  251 x12: MEMQ . commaparened

    '('  shift, and go to state 90

    commaparened  go to state 99


state 7

  252 x12: NEQ . commaparened

    '('  shift, and go to state 90

    commaparened  go to state 100


state 8

  253 x12: EQ . commaparened

    '('  shift, and go to state 90

    commaparened  go to state 101


state 9

  254 x12: GEQ . commaparened

    '('  shift, and go to state 90

    commaparened  go to state 102


state 10

  255 x12: LEQ . commaparened

    '('  shift, and go to state 90

    commaparened  go to state 103


state 11

  256 x12: FREEOF . commaparened

    '('  shift, and go to state 90

    commaparened  go to state 104


state 12

    9 proc_type: SYMBOLIC .

    $default  reduce using rule 9 (proc_type)


state 13

   10 proc_type: ALGEBRAIC .

    $default  reduce using rule 10 (proc_type)


state 14

   11 proc_qual: EXPR .

    $default  reduce using rule 11 (proc_qual)


state 15

   12 proc_qual: MACRO .

    $default  reduce using rule 12 (proc_qual)


state 16

   13 proc_qual: SMACRO .

    $default  reduce using rule 13 (proc_qual)


state 17

   44 proc_def: PROCEDURE . proc_head sep cmnd

    NOT     shift, and go to state 105
    SYMBOL  shift, and go to state 106
    '+'     shift, and go to state 107
    '-'     shift, and go to state 108

    prefix     go to state 109
    proc_head  go to state 110


state 18

   64 for_stmt: FOR . SYMBOL SETQ expr for_update for_action cmnd
   65         | FOR . EACH SYMBOL for_inon expr for_action cmnd

    EACH    shift, and go to state 111
    SYMBOL  shift, and go to state 112


state 19

   66 for_stmt: FOREACH . SYMBOL for_inon expr for_action cmnd

    SYMBOL  shift, and go to state 113


state 20

   49 rlistat: IN .

    $default  reduce using rule 49 (rlistat)


state 21

   50 rlistat: ON .

    $default  reduce using rule 50 (rlistat)


state 22

   55 if_stmt: IF . expr THEN cmnd ELSE cmnd
   56        | IF . expr THEN cmnd

    SETQ       shift, and go to state 1
    AND        shift, and go to state 2
    OR         shift, and go to state 3
    NOT        shift, and go to state 4
    MEMBER     shift, and go to state 5
    MEMQ       shift, and go to state 6
    NEQ        shift, and go to state 7
    EQ         shift, and go to state 8
    GEQ        shift, and go to state 9
    LEQ        shift, and go to state 10
    FREEOF     shift, and go to state 11
    SYMBOLIC   shift, and go to state 12
    ALGEBRAIC  shift, and go to state 13
    EXPR       shift, and go to state 14
    MACRO      shift, and go to state 15
    SMACRO     shift, and go to state 16
    PROCEDURE  shift, and go to state 17
    FOR        shift, and go to state 18
    FOREACH    shift, and go to state 19
    IF         shift, and go to state 22
    REPEAT     shift, and go to state 23
    WHILE      shift, and go to state 24
    BEGIN      shift, and go to state 25
    LSECT      shift, and go to state 28
    GO         shift, and go to state 29
    GOTO       shift, and go to state 30
    LAMBDA     shift, and go to state 31
    SYMBOL     shift, and go to state 32
    NUMBER     shift, and go to state 33
    STRING     shift, and go to state 34
    LIST       shift, and go to state 35
    RETURN     shift, and go to state 36
    ENDSTAT    shift, and go to state 38
    '+'        shift, and go to state 39
    '-'        shift, and go to state 40
    '('        shift, and go to state 41
    '{'        shift, and go to state 42

    proc_type      go to state 94
    proc_qual      go to state 46
    proc_def       go to state 47
    if_stmt        go to state 50
    for_stmt       go to state 51
    while_stmt     go to state 52
    repeat_stmt    go to state 53
    return_stmt    go to state 54
    goto_stmt      go to state 55
    group_expr     go to state 56
    block_expr     go to state 57
    lambda_expr    go to state 58
    expr           go to state 114
    rx0            go to state 60
    lx0            go to state 61
    rx1            go to state 62
    lx1            go to state 63
    rx2            go to state 64
    lx2            go to state 65
    rx3            go to state 66
    lx3            go to state 67
    rx4            go to state 68
    lx4            go to state 69
    rx5            go to state 70
    lx5            go to state 71
    rx6            go to state 72
    lx6            go to state 73
    rx6a           go to state 74
    lx6a           go to state 75
    rx7            go to state 76
    lx7            go to state 77
    rx8            go to state 78
    lx8            go to state 79
    rx9            go to state 80
    lx9            go to state 81
    lx10           go to state 82
    rx10           go to state 83
    rx11           go to state 84
    lx11           go to state 85
    parened        go to state 86
    x12notparened  go to state 87
    x12            go to state 88
    x13b           go to state 89


state 23

   68 repeat_stmt: REPEAT . cmnd UNTIL expr

    SETQ       shift, and go to state 1
    AND        shift, and go to state 2
    OR         shift, and go to state 3
    NOT        shift, and go to state 4
    MEMBER     shift, and go to state 5
    MEMQ       shift, and go to state 6
    NEQ        shift, and go to state 7
    EQ         shift, and go to state 8
    GEQ        shift, and go to state 9
    LEQ        shift, and go to state 10
    FREEOF     shift, and go to state 11
    SYMBOLIC   shift, and go to state 12
    ALGEBRAIC  shift, and go to state 13
    EXPR       shift, and go to state 14
    MACRO      shift, and go to state 15
    SMACRO     shift, and go to state 16
    PROCEDURE  shift, and go to state 17
    FOR        shift, and go to state 18
    FOREACH    shift, and go to state 19
    IN         shift, and go to state 20
    ON         shift, and go to state 21
    IF         shift, and go to state 22
    REPEAT     shift, and go to state 23
    WHILE      shift, and go to state 24
    BEGIN      shift, and go to state 25
    LSECT      shift, and go to state 28
    GO         shift, and go to state 29
    GOTO       shift, and go to state 30
    LAMBDA     shift, and go to state 31
    SYMBOL     shift, and go to state 32
    NUMBER     shift, and go to state 33
    STRING     shift, and go to state 34
    LIST       shift, and go to state 35
    RETURN     shift, and go to state 36
    RLISTAT    shift, and go to state 37
    ENDSTAT    shift, and go to state 38
    '+'        shift, and go to state 39
    '-'        shift, and go to state 40
    '('        shift, and go to state 41
    '{'        shift, and go to state 42

    proc_type      go to state 94
    proc_qual      go to state 46
    proc_def       go to state 47
    rlistat        go to state 48
    cmnd           go to state 115
    if_stmt        go to state 50
    for_stmt       go to state 51
    while_stmt     go to state 52
    repeat_stmt    go to state 53
    return_stmt    go to state 54
    goto_stmt      go to state 55
    group_expr     go to state 56
    block_expr     go to state 57
    lambda_expr    go to state 58
    expr           go to state 59
    rx0            go to state 60
    lx0            go to state 61
    rx1            go to state 62
    lx1            go to state 63
    rx2            go to state 64
    lx2            go to state 65
    rx3            go to state 66
    lx3            go to state 67
    rx4            go to state 68
    lx4            go to state 69
    rx5            go to state 70
    lx5            go to state 71
    rx6            go to state 72
    lx6            go to state 73
    rx6a           go to state 74
    lx6a           go to state 75
    rx7            go to state 76
    lx7            go to state 77
    rx8            go to state 78
    lx8            go to state 79
    rx9            go to state 80
    lx9            go to state 81
    lx10           go to state 82
    rx10           go to state 83
    rx11           go to state 84
    lx11           go to state 85
    parened        go to state 86
    x12notparened  go to state 87
    x12            go to state 88
    x13b           go to state 89


state 24

   67 while_stmt: WHILE . expr DO cmnd

    SETQ       shift, and go to state 1
    AND        shift, and go to state 2
    OR         shift, and go to state 3
    NOT        shift, and go to state 4
    MEMBER     shift, and go to state 5
    MEMQ       shift, and go to state 6
    NEQ        shift, and go to state 7
    EQ         shift, and go to state 8
    GEQ        shift, and go to state 9
    LEQ        shift, and go to state 10
    FREEOF     shift, and go to state 11
    SYMBOLIC   shift, and go to state 12
    ALGEBRAIC  shift, and go to state 13
    EXPR       shift, and go to state 14
    MACRO      shift, and go to state 15
    SMACRO     shift, and go to state 16
    PROCEDURE  shift, and go to state 17
    FOR        shift, and go to state 18
    FOREACH    shift, and go to state 19
    IF         shift, and go to state 22
    REPEAT     shift, and go to state 23
    WHILE      shift, and go to state 24
    BEGIN      shift, and go to state 25
    LSECT      shift, and go to state 28
    GO         shift, and go to state 29
    GOTO       shift, and go to state 30
    LAMBDA     shift, and go to state 31
    SYMBOL     shift, and go to state 32
    NUMBER     shift, and go to state 33
    STRING     shift, and go to state 34
    LIST       shift, and go to state 35
    RETURN     shift, and go to state 36
    ENDSTAT    shift, and go to state 38
    '+'        shift, and go to state 39
    '-'        shift, and go to state 40
    '('        shift, and go to state 41
    '{'        shift, and go to state 42

    proc_type      go to state 94
    proc_qual      go to state 46
    proc_def       go to state 47
    if_stmt        go to state 50
    for_stmt       go to state 51
    while_stmt     go to state 52
    repeat_stmt    go to state 53
    return_stmt    go to state 54
    goto_stmt      go to state 55
    group_expr     go to state 56
    block_expr     go to state 57
    lambda_expr    go to state 58
    expr           go to state 116
    rx0            go to state 60
    lx0            go to state 61
    rx1            go to state 62
    lx1            go to state 63
    rx2            go to state 64
    lx2            go to state 65
    rx3            go to state 66
    lx3            go to state 67
    rx4            go to state 68
    lx4            go to state 69
    rx5            go to state 70
    lx5            go to state 71
    rx6            go to state 72
    lx6            go to state 73
    rx6a           go to state 74
    lx6a           go to state 75
    rx7            go to state 76
    lx7            go to state 77
    rx8            go to state 78
    lx8            go to state 79
    rx9            go to state 80
    lx9            go to state 81
    lx10           go to state 82
    rx10           go to state 83
    rx11           go to state 84
    lx11           go to state 85
    parened        go to state 86
    x12notparened  go to state 87
    x12            go to state 88
    x13b           go to state 89


state 25

   90 block_expr: BEGIN . scalar_defs block_tail
   91           | BEGIN . block_tail
